--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -46,6 +46,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.idea/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
