--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.1
 backports.zoneinfo==0.2.1
 Django==4.2.1
+django-cors-headers==4.0.0
 djangorestframework==3.14.0
 pytz==2023.3
 sqlparse==0.4.4
