--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "components/*": ["components/*"],
       "hooks/*": ["hooks/*"],
-      "assets/*": ["assets/*"]
+      "assets/*": ["assets/*"],
+      "pages/*": ["pages/*"],
     }
   }
 }
