Integrate GetLesson From Backend

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -6,6 +6,7 @@
       "hooks/*": ["hooks/*"],
       "assets/*": ["assets/*"],
       "pages/*": ["pages/*"],
+      "apis/*": ["apis/*"],
     }
   }
 }
