--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,44 @@
     "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.12",
     "@tiptap/core": "^2.1.11",
+    "@tiptap/extension-blockquote": "^2.1.11",
+    "@tiptap/extension-bold": "^2.1.11",
+    "@tiptap/extension-bubble-menu": "^2.1.11",
+    "@tiptap/extension-bullet-list": "^2.1.11",
+    "@tiptap/extension-code": "^2.1.11",
+    "@tiptap/extension-code-block": "^2.1.11",
+    "@tiptap/extension-color": "^2.1.11",
+    "@tiptap/extension-document": "^2.1.11",
+    "@tiptap/extension-dropcursor": "^2.1.11",
+    "@tiptap/extension-floating-menu": "^2.1.11",
+    "@tiptap/extension-font-family": "^2.1.11",
+    "@tiptap/extension-gapcursor": "^2.1.11",
+    "@tiptap/extension-hard-break": "^2.1.11",
     "@tiptap/extension-heading": "^2.1.11",
+    "@tiptap/extension-highlight": "^2.1.11",
+    "@tiptap/extension-history": "^2.1.11",
+    "@tiptap/extension-horizontal-rule": "^2.1.11",
     "@tiptap/extension-image": "^2.1.11",
+    "@tiptap/extension-italic": "^2.1.11",
+    "@tiptap/extension-link": "^2.1.11",
+    "@tiptap/extension-list-item": "^2.1.11",
+    "@tiptap/extension-mention": "^2.1.11",
+    "@tiptap/extension-ordered-list": "^2.1.11",
+    "@tiptap/extension-paragraph": "^2.1.11",
+    "@tiptap/extension-placeholder": "^2.1.11",
+    "@tiptap/extension-strike": "^2.1.11",
+    "@tiptap/extension-subscript": "^2.1.11",
+    "@tiptap/extension-superscript": "^2.1.11",
     "@tiptap/extension-table": "^2.1.11",
+    "@tiptap/extension-table-cell": "^2.1.11",
+    "@tiptap/extension-table-header": "^2.1.11",
+    "@tiptap/extension-table-row": "^2.1.11",
+    "@tiptap/extension-task-item": "^2.1.11",
+    "@tiptap/extension-task-list": "^2.1.11",
+    "@tiptap/extension-text": "^2.1.11",
+    "@tiptap/extension-text-align": "^2.1.11",
+    "@tiptap/extension-text-style": "^2.1.11",
+    "@tiptap/extension-underline": "^2.1.11",
     "@tiptap/pm": "^2.1.11",
     "@tiptap/react": "^2.1.11",
     "@tiptap/starter-kit": "^2.1.11",
