--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.12",
     "@mui/lab": "^5.0.0-alpha.146",
     "@mui/material": "^5.14.12",
+    "@mui/x-data-grid": "^6.18.0",
     "@tiptap/core": "^2.1.11",
     "@tiptap/extension-blockquote": "^2.1.11",
     "@tiptap/extension-bold": "^2.1.11",
