--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,11 @@
-# DB Credentials
+# DB Credentials LOCAL
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
+
+# DB Credentials PROD
+DATABASE_URL_PROD=postgres://mydb_omcc_user:eT5K3vlHkw0YlwB7GcxjI7bNsGXLK5LW@dpg-cm080jud3nmc738l8ek0-a.singapore-postgres.render.com/mydb_omcc
+
+# OpenAI API Key
+OPENAI_API_KEY=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
