modify: modify settings for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,10 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
+
+# General Variables
+DEBUG=TRUE
+SECRET_KEY=django-insecure-=m=*xj8xoy99#25^6_fl=4wkllzn48dsrp77q6+3-$69=y(z71
+ALLOWED_HOSTS=https://techno-learn.onrender.com,*
+
+CSRF_TRUSTED_ORIGINS=http://techno-learn.onrender.com,http://localhost:3000,http://localhost:5173
