[Marc] - implemented notif, insight, and suggested content UI.

--- a/backend/.env
+++ b/backend/.env
@@ -6,12 +6,13 @@ POSTGRES_HOST=db
 
 # General Variables
 DEBUG=TRUE
-SECRET_KEY=akya^e5k7t@0u+h9%#a)+$*gy2^^@63x#9x4l=$g$7spm0juv5
+SECRET_KEY='akya^e5k7t@0u+h9%#a)+$*gy2^^@63x#9x4l=$g$7spm0juv5'
 # SECRET_KEY=django-insecure-=m=*xj8xoy99#25^6_fl=4wkllzn48dsrp77q6+3-$69=y(z71
 ALLOWED_HOSTS=https://techno-learn.onrender.com,*
 
 # OPENAI_API_KEY=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
 # OPENAI_API_KEY=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
-OPENAI_API_KEY=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
+# OPENAI_API_KEY=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
+OPENAI_API_KEY=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
 
 CSRF_TRUSTED_ORIGINS=http://techno-learn.onrender.com,http://localhost:3000,http://localhost:5173
