--- a/backend/.env
+++ b/backend/.env
@@ -14,5 +14,6 @@ ALLOWED_HOSTS=https://techno-learn.onrender.com,*
 # OPENAI_API_KEY=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
 # OPENAI_API_KEY=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
 OPENAI_API_KEY=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
+OLLAMA_API_KEY="llama2"
 
 CSRF_TRUSTED_ORIGINS=http://techno-learn.onrender.com,http://localhost:3000,http://localhost:5173
