--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: Django CI Workflow
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11]
+        python-version: [3.10]
 
     steps:
     - uses: actions/checkout@v3
