--- a/frontend/package.json
+++ b/frontend/package.json
@@ -69,6 +69,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.15.0",
     "tiptap-extension-resize-image": "^1.1.8",
     "yup": "^1.4.0"
