--- a/heroku.yml
+++ b/heroku.yml
@@ -6,4 +6,4 @@ buildpacks:
   - heroku/python
 
 run:
-  web: cd backend && gunicorn backend_django.wsgi:application
+  web: cd backend && pip install -r requirements.txt && gunicorn backend_django.wsgi:application
