--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "@tiptap/starter-kit": "^2.1.11",
     "axios": "^1.5.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "formik": "^2.4.4",
     "i": "^0.3.7",
