--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
     "formik": "^2.4.4",
     "i": "^0.3.7",
     "mui-tiptap": "^1.8.3",
+    "openai": "^4.73.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
